--- a/assets/general/S25/schedule.tex
+++ b/assets/general/S25/schedule.tex
@@ -43,7 +43,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 9: \today} \normalsize
+\hfill \small \emph{version 10: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -84,9 +84,9 @@
 
 \wkday{11}{3/24}{3/28}  & & \proj{Project announced} & \ch{7} \par \dl{withdrawals} \\ \hline
 
-\wkday{12}{3/31}{4/4}   & \hdue{A6} & \ch{8} \par \proj{Project proposal due} & \\ \hline
+\wkday{12}{3/31}{4/4}   & \hdue{A6} & & \proj{Project proposal due} \\ \hline
 
-\wkday{13}{4/7}{4/11}   & \ch{9} &  &  \\ \hline
+\wkday{13}{4/7}{4/11}   & \ch{8} &  & \ch{9} \par \hdue{A7}  \\ \hline
 
 \wkday{14}{4/14}{4/17}  &  &  & \ch{10} \\ \hline
 
