correct the illiteracy for the future

--- a/assets/homework/S25/A7.tex
+++ b/assets/homework/S25/A7.tex
@@ -103,7 +103,7 @@ Please read Chapters 6, 7, and 8 of the textbook (R.~J.~LeVeque, \emph{Finite Di
 Use $\lambda=-2100$.  Apply forward Euler\footnote{Re-using an old code is just fine, but of course please pay attention to the details!} to compute approximations of $u(T)$ for $T=2$, for the given values of $k$, and report the final-time numerical errors $|U^N - u(T)|$ as in the Table.  Confirm by this experiment that there is a critical value of $k$ around 0.00095 where the error finally drops from enormous values to something comparable to, and then much smaller than, the solution magnitude itself.
 
 \medskip
-\noindent \emph{The book's explains why: $|1+k\lambda| \le 1$ only if $k|\lambda|<2$ or equivalently $k < 2/|\lambda| = 2/2100 = 0.00095238$.  There is no need to include this analysis in your answer; please just confirm it experimentally.}
+\noindent \emph{The book explains why: $|1+k\lambda| \le 1$ only if $k|\lambda|<2$ or equivalently $k < 2/|\lambda| = 2/2100 = 0.00095238$.  There is no need to include this analysis in your answer; please just confirm it experimentally.}
 
 
 \prob{Problem P29.}  Consider $\theta$-\emph{methods} for $u' = f(t,u)$:
