update daily & schedule

--- a/assets/general/S25/schedule.tex
+++ b/assets/general/S25/schedule.tex
@@ -43,7 +43,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 10: \today} \normalsize
+\hfill \small \emph{version 11: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -88,11 +88,11 @@
 
 \wkday{13}{4/7}{4/11}   & \ch{8} &  & \ch{9} \par \hdue{A7}  \\ \hline
 
-\wkday{14}{4/14}{4/17}  &  &  & \ch{10} \\ \hline
+\wkday{14}{4/14}{4/17}  &  &  & \ch{10} \par \hdue{A8} \\ \hline
 
 \wkday{15}{4/21}{4/25}  &  &  &  \\ \hline
 
-\wkday{16}{4/28}{5/2}   & \par {\scriptsize yes, a class day} \par \proj{Project due} & \ee{Final Exam} \par \ee{THURSDAY 5/1 $\to$} \par 3:15--5:15pm & 
+\wkday{16}{4/28}{5/2}   & \par {\scriptsize a class day!} \par \proj{Project due} & \ee{Final Exam} \par \ee{THURSDAY 5/1 $\to$} \par 3:15--5:15pm & 
 
 \end{tabularx}
 
