--- a/assets/general/S25/schedule.tex
+++ b/assets/general/S25/schedule.tex
@@ -43,7 +43,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 11: \today} \normalsize
+\hfill \small \emph{version 12: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -90,7 +90,7 @@
 
 \wkday{14}{4/14}{4/17}  &  &  & \ch{10} \par \hdue{A8} \\ \hline
 
-\wkday{15}{4/21}{4/25}  &  &  &  \\ \hline
+\wkday{15}{4/21}{4/25}  &  &  & \hdue{A9} \\ \hline
 
 \wkday{16}{4/28}{5/2}   & \par {\scriptsize a class day!} \par \proj{Project due} & \ee{Final Exam} \par \ee{THURSDAY 5/1 $\to$} \par 3:15--5:15pm & 
 
