wish I had put in this phrase

--- a/assets/exams/S25/finalcases.tex
+++ b/assets/exams/S25/finalcases.tex
@@ -95,7 +95,7 @@ A Case Summary reviews the finite difference (FD) numerical analysis of one of t
 You are strongly encouraged to draft and practice your planned Case Summaries in advance.  When preparing, make sure to read relevant sections of the textbook.  Get feedback on your drafts from other students or me/faculty/friends/family/pets.  Think about how you will remember enough detail so as to recreate the Summary during the in-class Exam.
 
 \smallskip
-\textbf{Each Summary should be at most one full page.}  Equations are important, but please write complete sentences for the major ideas.  Add at most three sketches as needed.  (A Summary which is \emph{only} equations and sketches cannot achieve a good grade.)  Make sure to \textbf{state the problem} (DE and initial/boundary conditions), comment on or supply an \textbf{exact solution}, recommend one or two \textbf{FD discretization}(s), summarize the \textbf{truncation error}, and summarize \textbf{stability}.  Then consider and fill-in any relevant additional ideas for the problem and the chosen method.  (See ``Consider:'' below for the specific problems.)  The goal is \emph{not} to prove anything, but to accurately and precisely summarize what we know---or what we easily could know---about the problem and the available method(s).
+\textbf{Each Summary should be at most one full page.}  Equations are important, but please write complete sentences for the major ideas.  Add at most three sketches as needed.  (A Summary which is \emph{only} equations and sketches cannot achieve a good grade.)  Make sure to \textbf{state the problem} (DE and initial/boundary conditions), comment on or supply an \textbf{exact solution} suitable for verification, recommend one or two \textbf{FD discretization}(s), summarize the \textbf{truncation error}, and summarize \textbf{stability}.  Then consider and fill-in any relevant additional ideas for the problem and the chosen method.  (See ``Consider:'' below for the specific problems.)  The goal is \emph{not} to prove anything, but to accurately and precisely summarize what we know---or what we easily could know---about the problem and the available method(s).
 
 \medskip
 \noindent \hrulefill
